--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "lint:all": "yarn lint:code && yarn lint:prettier -c",
     "start:dev": "nodemon"
   },
-  "dependencies": {},
+  "dependencies": {
+    "koa": "^2.13.4"
+  },
   "devDependencies": {
+    "@types/koa": "^2.13.4",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
     "eslint": "^7.12.1",
@@ -24,6 +27,7 @@
     "nodemon": "^2.0.15",
     "prettier": "^2.6.2",
     "ts-node": "^10.7.0",
+    "tsconfig-paths": "^3.14.1",
     "typescript": "^4.6.3"
   }
 }
