--- a/tsconfig.json
+++ b/tsconfig.json
@@ -99,5 +99,15 @@
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
-  }
+  },
+  "include": [
+    "**/*.ts",
+    "**/*.js",
+    "./*.js",
+  ],
+  "exclude": [
+    "node_modules",
+    "coverage",
+    "build",
+  ],
 }
