--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "pre-commit": "lint-staged"
   },
   "dependencies": {
+    "@koa/router": "^10.1.1",
     "koa": "^2.13.4"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
     "@types/koa": "^2.13.4",
+    "@types/koa__router": "^8.0.11",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
     "eslint": "^7.12.1",
