--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@koa/router": "^10.1.1",
     "knex": "^1.0.5",
     "koa": "^2.13.4",
+    "koa-logger": "^3.2.1",
     "objection": "^3.0.1",
     "pg": "^8.7.3"
   },
@@ -25,6 +26,7 @@
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
     "@types/koa": "^2.13.4",
+    "@types/koa-logger": "^3.1.2",
     "@types/koa__router": "^8.0.11",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
