chore(auth): create logger with winston

--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@koa/router": "^10.1.1",
     "knex": "^1.0.5",
     "koa": "^2.13.4",
+    "koa-helmet": "^6.1.0",
     "koa-logger": "^3.2.1",
     "objection": "^3.0.1",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "winston": "^3.7.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.2.3",
