--- a/package.json
+++ b/package.json
@@ -19,22 +19,30 @@
   },
   "dependencies": {
     "@koa/router": "^10.1.1",
-    "dotenv": "^16.0.0",
+    "bcrypt": "^5.0.1",
     "dotenv-safe": "^8.2.0",
     "knex": "^1.0.5",
     "koa": "^2.13.4",
+    "koa-body": "^5.0.0",
     "koa-helmet": "^6.1.0",
     "koa-logger": "^3.2.1",
     "objection": "^3.0.1",
+    "objection-db-errors": "^1.1.2",
     "pg": "^8.7.3",
-    "winston": "^3.7.2"
+    "ramda": "^0.28.0",
+    "uuid": "^8.3.2",
+    "winston": "^3.7.2",
+    "yup": "^0.32.11",
+    "yup-locale-pt": "^0.0.9"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
+    "@types/bcrypt": "^5.0.0",
     "@types/koa": "^2.13.4",
     "@types/koa-logger": "^3.1.2",
     "@types/koa__router": "^8.0.11",
+    "@types/ramda": "^0.28.12",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
     "@vscode/sqlite3": "^5.0.8",
