--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@koa/router": "^10.1.1",
     "bcrypt": "^5.0.1",
     "dotenv-safe": "^8.2.0",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^1.0.5",
     "koa": "^2.13.4",
     "koa-body": "^5.0.0",
@@ -39,6 +40,7 @@
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
     "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/koa": "^2.13.4",
     "@types/koa-logger": "^3.1.2",
     "@types/koa__router": "^8.0.11",
