--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "koa-body": "^5.0.0",
     "koa-helmet": "^6.1.0",
     "koa-logger": "^3.2.1",
+    "koa-passport": "^4.1.4",
     "objection": "^3.0.1",
     "objection-db-errors": "^1.1.2",
+    "passport-jwt": "^4.0.0",
     "pg": "^8.7.3",
     "ramda": "^0.28.0",
     "uuid": "^8.3.2",
@@ -43,7 +45,9 @@
     "@types/jsonwebtoken": "^8.5.8",
     "@types/koa": "^2.13.4",
     "@types/koa-logger": "^3.1.2",
+    "@types/koa-passport": "^4.0.3",
     "@types/koa__router": "^8.0.11",
+    "@types/passport-jwt": "^3.0.6",
     "@types/ramda": "^0.28.12",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
