--- a/package.json
+++ b/package.json
@@ -12,17 +12,46 @@
     "lint:all": "yarn lint:code && yarn lint:prettier -c",
     "start:dev": "nodemon",
     "prepare": "husky install",
-    "pre-commit": "lint-staged"
+    "pre-commit": "lint-staged",
+    "migration:create": "knex migrate:make --cwd src/infra/database -x ts --esm",
+    "migration:run": "node -r dotenv-safe/config ./node_modules/.bin/knex --cwd src/infra/database migrate:latest",
+    "migration:rollback": "node -r dotenv-safe/config ./node_modules/.bin/knex migrate:rollback --cwd src/infra/database"
   },
   "dependencies": {
-    "koa": "^2.13.4"
+    "@koa/router": "^10.1.1",
+    "bcrypt": "^5.0.1",
+    "dotenv-safe": "^8.2.0",
+    "jsonwebtoken": "^8.5.1",
+    "knex": "^1.0.5",
+    "koa": "^2.13.4",
+    "koa-body": "^5.0.0",
+    "koa-helmet": "^6.1.0",
+    "koa-logger": "^3.2.1",
+    "koa-passport": "^4.1.4",
+    "objection": "^3.0.1",
+    "objection-db-errors": "^1.1.2",
+    "passport-jwt": "^4.0.0",
+    "pg": "^8.7.3",
+    "ramda": "^0.28.0",
+    "uuid": "^8.3.2",
+    "winston": "^3.7.2",
+    "yup": "^0.32.11",
+    "yup-locale-pt": "^0.0.9"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
+    "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/koa": "^2.13.4",
+    "@types/koa-logger": "^3.1.2",
+    "@types/koa-passport": "^4.0.3",
+    "@types/koa__router": "^8.0.11",
+    "@types/passport-jwt": "^3.0.6",
+    "@types/ramda": "^0.28.12",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
+    "@vscode/sqlite3": "^5.0.8",
     "eslint": "^7.12.1",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.22.1",
