--- a/.env.example
+++ b/.env.example
@@ -2,10 +2,6 @@ NODE_ENV=development
 PORT=3000
 
 #DATABASE
-DB_HOST=127.0.0.1
-DB_PORT=5432
-DB_NAME=postgres
-DB_PASSWORD=docker
-DB_USER=postgres
+DATABASE_URL=postgresql://DB_USER:DB_PASSWORD@localhost:5432/BD_NAME?schema=public
 
 APP_SECRET=12345
