feat: create products and dependencies (#4)
* chore(plop): add plop generate template

* feat(product): change orm from objection and knex to prisma

* chore(brand): create CRUD of brands and middleware to use soft delete

* chore(plop): update template

* chore(size): create size endpoint

* chore(color): create color endpoint

* chore(product category): create procut category endpoint

* chore(product): create CRUD of products

* chore(product-variation): create CRUD product variation

* chore(product-image): create product image migration and model

Co-authored-by: Abraão Duarte <abraaoduarte@Abraaos-MacBook-Pro.local>

--- a/package.json
+++ b/package.json
@@ -13,25 +13,25 @@
     "start:dev": "nodemon",
     "prepare": "husky install",
     "pre-commit": "lint-staged",
-    "migration:create": "knex migrate:make --cwd src/infra/database -x ts --esm",
-    "migration:run": "node -r dotenv-safe/config ./node_modules/.bin/knex --cwd src/infra/database migrate:latest",
-    "migration:rollback": "node -r dotenv-safe/config ./node_modules/.bin/knex migrate:rollback --cwd src/infra/database"
+    "prisma:generate": "prisma generate",
+    "migration:create": "prisma migrate dev --create-only --name",
+    "migration:run": "prisma migrate deploy",
+    "generate": "yarn plop --plopfile generators/plopfile.js"
   },
   "dependencies": {
     "@koa/router": "^10.1.1",
+    "@prisma/client": "^3.14.0",
     "bcrypt": "^5.0.1",
     "dotenv-safe": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
-    "knex": "^1.0.5",
     "koa": "^2.13.4",
     "koa-body": "^5.0.0",
     "koa-helmet": "^6.1.0",
     "koa-logger": "^3.2.1",
     "koa-passport": "^4.1.4",
-    "objection": "^3.0.1",
-    "objection-db-errors": "^1.1.2",
     "passport-jwt": "^4.0.0",
     "pg": "^8.7.3",
+    "qs": "^6.10.3",
     "ramda": "^0.28.0",
     "uuid": "^8.3.2",
     "winston": "^3.7.2",
@@ -60,7 +60,9 @@
     "husky": "^7.0.4",
     "lint-staged": "^12.3.7",
     "nodemon": "^2.0.15",
+    "plop": "^3.1.0",
     "prettier": "^2.6.2",
+    "prisma": "^3.14.0",
     "ts-node": "^10.7.0",
     "tsconfig-paths": "^3.14.1",
     "typescript": "^4.6.3"
