chore(yarn): add yarn 3 and configure workspace

--- a/package.json
+++ b/package.json
@@ -1,70 +1,17 @@
 {
-  "name": "backend",
+  "name": "blacktag-frontend",
   "version": "1.0.0",
-  "main": "index.js",
+  "repository": "https://github.com/abraaoduarte/isa-store",
+  "author": "Abraão Duarte <abraao.n.duarte@gmail.com>",
   "license": "MIT",
-  "scripts": {
-    "build": "tsc",
-    "compile": "tsc --noEmit",
-    "compile:all": "yarn compile --project tsconfig.json",
-    "lint:code": "eslint 'src/**/*.{js,ts}' --max-warnings 0",
-    "lint:prettier": "yarn prettier 'src/**/*.{js,ts,json,md,yml}'",
-    "lint:all": "yarn lint:code && yarn lint:prettier -c",
-    "start:dev": "nodemon",
-    "prepare": "husky install",
-    "pre-commit": "lint-staged",
-    "prisma:generate": "prisma generate",
-    "migration:create": "prisma migrate dev --create-only --name",
-    "migration:run": "prisma migrate deploy",
-    "generate": "yarn plop --plopfile generators/plopfile.js"
+  "private": true,
+  "workspaces": [
+    "apps/*"
+  ],
+  "engines": {
+    "node": "16.0.0",
+    "yarn": ">=3.0.0",
+    "npm": "please-use-yarn"
   },
-  "dependencies": {
-    "@koa/router": "^10.1.1",
-    "@prisma/client": "^3.14.0",
-    "bcrypt": "^5.0.1",
-    "dotenv-safe": "^8.2.0",
-    "jsonwebtoken": "^8.5.1",
-    "koa": "^2.13.4",
-    "koa-body": "^5.0.0",
-    "koa-helmet": "^6.1.0",
-    "koa-logger": "^3.2.1",
-    "koa-passport": "^4.1.4",
-    "passport-jwt": "^4.0.0",
-    "pg": "^8.7.3",
-    "qs": "^6.10.3",
-    "ramda": "^0.28.0",
-    "uuid": "^8.3.2",
-    "winston": "^3.7.2",
-    "yup": "^0.32.11",
-    "yup-locale-pt": "^0.0.9"
-  },
-  "devDependencies": {
-    "@commitlint/cli": "^16.2.3",
-    "@commitlint/config-conventional": "^16.2.1",
-    "@types/bcrypt": "^5.0.0",
-    "@types/jsonwebtoken": "^8.5.8",
-    "@types/koa": "^2.13.4",
-    "@types/koa-logger": "^3.1.2",
-    "@types/koa-passport": "^4.0.3",
-    "@types/koa__router": "^8.0.11",
-    "@types/passport-jwt": "^3.0.6",
-    "@types/ramda": "^0.28.12",
-    "@typescript-eslint/eslint-plugin": "^5.18.0",
-    "@typescript-eslint/parser": "^5.18.0",
-    "@vscode/sqlite3": "^5.0.8",
-    "eslint": "^7.12.1",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "husky": "^7.0.4",
-    "lint-staged": "^12.3.7",
-    "nodemon": "^2.0.15",
-    "plop": "^3.1.0",
-    "prettier": "^2.6.2",
-    "prisma": "^3.14.0",
-    "ts-node": "^10.7.0",
-    "tsconfig-paths": "^3.14.1",
-    "typescript": "^4.6.3"
-  }
+  "packageManager": "yarn@3.0.0"
 }
