chore(gitignore): prevent commit vscode folder

--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,13 @@ yarn-error.log*
 *.launch
 *.sublime-workspace
 
+.vscode/
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
 # Docker overrides
 
 ./docker-compose.override.yml
