--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "yarn": ">=3.0.0",
     "npm": "please-use-yarn"
   },
-  "packageManager": "yarn@3.0.0"
+  "packageManager": "yarn@3.2.0",
+  "devDependencies": {
+    "typescript": "^4.6.4"
+  }
 }
