--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -12,7 +12,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
     "@material-ui/core": "^4.12.4",
+    "@mui/material": "^5.8.1",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
