--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -6,7 +6,7 @@
     "hoistingLimits": "workspaces"
   },
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 6060",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -19,15 +19,18 @@
     "prettify": "prettier --write 'src/**/*.{js,jsx,ts,tsx,less,json,md,yml}'"
   },
   "dependencies": {
+    "@emotion/cache": "^11.7.1",
     "@emotion/react": "^11.9.0",
+    "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.8.1",
-    "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.8.0",
     "@mui/material": "^5.8.1",
+    "@mui/styles": "^5.8.0",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-is": "^18.1.0",
+    "react-query": "^3.39.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
