--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -27,7 +27,10 @@
     "@mui/icons-material": "^5.8.0",
     "@mui/material": "^5.8.1",
     "@mui/styles": "^5.8.0",
+    "axios": "^0.27.2",
     "next": "12.1.6",
+    "nookies": "^2.5.2",
+    "notistack": "^2.0.5",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-hook-form": "^7.31.2",
