--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -20,6 +20,7 @@
     "generate": "yarn plop --plopfile generators/plopfile.js"
   },
   "dependencies": {
+    "@koa/cors": "^3.3.0",
     "@koa/router": "^10.1.1",
     "@prisma/client": "^3.14.0",
     "bcrypt": "^5.0.1",
@@ -47,6 +48,7 @@
     "@types/koa": "^2.13.4",
     "@types/koa-logger": "^3.1.2",
     "@types/koa-passport": "^4.0.3",
+    "@types/koa__cors": "^3.3.0",
     "@types/koa__router": "^8.0.11",
     "@types/passport-jwt": "^3.0.6",
     "@types/ramda": "^0.28.12",
