--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -28,9 +28,11 @@
     "@mui/material": "^5.8.1",
     "@mui/styles": "^5.8.0",
     "axios": "^0.27.2",
+    "date-fns": "^2.28.0",
     "next": "12.1.6",
     "nookies": "^2.5.2",
     "notistack": "^2.0.5",
+    "ramda": "^0.28.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-hook-form": "^7.31.2",
