--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -28,22 +28,22 @@
     "@mui/material": "^5.8.1",
     "@mui/styles": "^5.8.0",
     "axios": "^0.27.2",
+    "date-fns": "^2.28.0",
     "next": "12.1.6",
     "nookies": "^2.5.2",
     "notistack": "^2.0.5",
+    "ramda": "^0.28.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-hook-form": "^7.31.2",
     "react-is": "^18.1.0",
     "react-query": "^3.39.0",
-    "styled-components": "^5.3.5",
     "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
-    "@types/styled-components": "^5.1.25",
     "@typescript-eslint/eslint-plugin": "^5.26.0",
     "@typescript-eslint/parser": "^5.26.0",
     "eslint": "8.16.0",
