--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -25,6 +25,7 @@
     "@emotion/styled": "^11.8.1",
     "@hookform/resolvers": "^2.8.10",
     "@mui/icons-material": "^5.8.0",
+    "@mui/lab": "^5.0.0-alpha.83",
     "@mui/material": "^5.8.1",
     "@mui/styles": "^5.8.0",
     "axios": "^0.27.2",
