--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -32,6 +32,7 @@
     "koa-helmet": "^6.1.0",
     "koa-logger": "^3.2.1",
     "koa-passport": "^4.1.4",
+    "p-map": "^4.0.0",
     "passport-jwt": "^4.0.0",
     "pg": "^8.7.3",
     "qs": "^6.10.3",
