--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -30,6 +30,7 @@
     "@mui/styles": "^5.8.0",
     "axios": "^0.27.2",
     "date-fns": "^2.28.0",
+    "dinero.js": "alpha",
     "next": "12.1.6",
     "nookies": "^2.5.2",
     "notistack": "^2.0.5",
@@ -37,7 +38,9 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-hook-form": "^7.31.2",
+    "react-imask": "^6.4.2",
     "react-is": "^18.1.0",
+    "react-number-format": "^4.9.3",
     "react-query": "^3.39.0",
     "yup": "^0.32.11"
   },
