--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -42,6 +42,7 @@
     "react-is": "^18.1.0",
     "react-number-format": "^4.9.3",
     "react-query": "^3.39.0",
+    "slugify": "^1.6.5",
     "yup": "^0.32.11"
   },
   "devDependencies": {
