--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -30,6 +30,7 @@
     "@mui/styles": "^5.8.0",
     "axios": "^0.27.2",
     "date-fns": "^2.28.0",
+    "date-fns-tz": "^1.3.6",
     "dinero.js": "alpha",
     "next": "12.1.6",
     "nookies": "^2.5.2",
